--- a/it_modernization/raw_data/agencies.yaml
+++ b/it_modernization/raw_data/agencies.yaml
@@ -139,6 +139,9 @@
 - name: National Institute of Standards and Technology
   id: NIST
 
+- name: National Science Foundation
+  id: NSF
+
 - name: National Security Agency
   id: NSA
   parent_id: DOD
