--- a/it_modernization/raw_data/events.yaml
+++ b/it_modernization/raw_data/events.yaml
@@ -4498,6 +4498,12 @@
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.134.0.pdf
   agency: SSA
 
+- date: 2025-04-14
+  type: report
+  event: Three unidentified DOGE staffers show up at NSF headquarters, forcing all approved grants to go through a "secondary review"
+  source: https://www.science.org/content/article/nsf-halts-grant-awards-while-staff-do-second-review
+  agency: NSF
+
 - date: 2025-04-15
   type: promotion
   event: Jeremy Lewin is named the new acting head of foreign assistance at the State Department after the departure of Peter Marocco
