--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -528,6 +528,20 @@ CFPB:
     - Nikhil Rajpal
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
     agency: CFPB
+  - date: 2025-04-17
+    type: disruption
+    event: CFPB conducts a massive Reduction in Force, eliminating 1483 positions and retaining only 207 people to perform its duties. This is larger than the planned RIF in February that was blocked by Judge Amy Berman-Jackson
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.109.0_4.pdf
+    case_no: 1:25-cv-00381
+    agency: CFPB
+  - date: 2025-04-17
+    type: report
+    event: According to sworn testimony by Alex Doe, the CFPB RIF team was forced to work for 36 hours straight and subjected to verbal abuse by Gavin Kliger
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.111.0.pdf
+    case_no: 1:25-cv-00381
+    named:
+    - Gavin Kliger
+    agency: CFPB
   systems:
     HRConnect:
       name: HRConnect
